use json version list

--- a/src/style.css
+++ b/src/style.css
@@ -67,9 +67,14 @@ img.python {
     height: 25px;
 }
 
-.versionSelector {
+.versionSelector.cxx {
+    height: 30px;
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
 }
 
 .versionSelector.python {
     width: 100%;
+    font-size: 14.4px;
+    font-family: "Lato","proxima-nova","Helvetica Neue",Arial,sans-serif;
 }
