update code to use new logo

--- a/src/style.css
+++ b/src/style.css
@@ -59,7 +59,11 @@ img.python {
     width: auto;
 }
 
-.pv-title-python .lang-logo {
+.wy-side-nav-search img {
+    height: 50px;
+}
+
+.pv-title-python img.lang-logo {
     height: 16px;
 }
 
